# Silver-Windows-Edition

./: CMakeCache.txt  CMakeLists.txt  LICENSE  README.md
.github/: FUNDING.yml
Licences/: SILVER LICENCE 1.0  SILVER LICENCE 2.0
include/: Silver.hpp  Silver.pch.hpp  SilverAnimation.hpp  SilverCamera.hpp  SilverColor.hpp  SilverFluid.hpp  SilverKeyboard.hpp  SilverMusic.hpp  SilverThreading.hpp  SilverTimer.hpp  SilverVMouse.hpp  smath.hpp
src/: Silver.cpp  SilverAnimation.cpp  SilverCamera.cpp  SilverColor.cpp  SilverFluid.cpp  SilverKeyboard.cpp  SilverMusic.cpp  SilverSpriteRendering.cpp  SilverThreading.cpp  SilverTimer.cpp  SilverVMouse.cpp  main.cpp  smath.cpp
